--- a/po/en.po
+++ b/po/en.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.github.tudo75.xed-codecomment-plugin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-30 18:04+0200\n"
+"POT-Creation-Date: 2021-08-31 00:06+0200\n"
 "PO-Revision-Date: 2021-08-30 18:06+0200\n"
 "Last-Translator: Nicola Tudino <tudo75@gmail.com>\n"
 "Language-Team: none\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: data/codecomment-plugin.desktop.in:5
 msgid "codecomment"
-msgstr "codecomment"
+msgstr "Code Comment"
 
 #: data/codecomment-plugin.desktop.in:7
 msgid "Xed porting of the Gedit codecomment plugin"
